--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,58 @@
-apturl==0.5.2
-astroid==2.8.4
-bcrypt==3.1.7
-blinker==1.4
-Brlapi==0.7.0
-ccsm==0.9.14.1
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-compizconfig-python==0.9.14.1
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-distro==1.4.0
-distro-info===0.23ubuntu1
-duplicity==0.8.12.0
+argon2-cffi==21.1.0
+attrs==21.2.0
+backcall==0.2.0
+bleach==4.1.0
+cffi==1.15.0
+click==8.0.3
+debugpy==1.5.1
+decorator==5.1.0
+defusedxml==0.7.1
 entrypoints==0.3
-fasteners==0.14.1
-future==0.18.2
-httplib2==0.14.0
-idna==2.8
-isort==5.9.3
-kazam==1.4.5
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.6.0
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.0
-mccabe==0.6.1
-monotonic==1.5
-netifaces==0.10.4
-oauthlib==3.1.0
-olefile==0.46
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-platformdirs==2.4.0
-protobuf==3.6.1
-pycairo==1.16.2
-pycups==1.9.73
-PyGObject==3.36.0
-PyJWT==1.7.1
-pylint==2.11.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.6
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.14.0
-systemd-python==234
-toml==0.10.2
-typing-extensions==3.10.0.2
-ubuntu-advantage-tools==27.4
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-vboxapi==1.0
-wadllib==1.3.3
-wrapt==1.13.2
-xkit==0.0.0
-z3-solver==4.8.12.0
+Flask==2.0.2
+importlib-resources==5.4.0
+ipykernel==6.5.0
+ipython==7.29.0
+ipython-genutils==0.2.0
+itsdangerous==2.0.1
+jedi==0.18.1
+Jinja2==3.0.3
+jsonschema==4.2.1
+jupyter-client==7.0.6
+jupyter-core==4.9.1
+jupyterlab-pygments==0.1.2
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+nbclient==0.5.8
+nbconvert==6.3.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.6
+numpy==1.21.4
+packaging==21.3
+pandas==1.3.4
+pandocfilters==1.5.0
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client==0.12.0
+prompt-toolkit==3.0.22
+ptyprocess==0.7.0
+pycparser==2.21
+Pygments==2.10.0
+pyparsing==3.0.6
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.3
+pyzmq==22.3.0
+Send2Trash==1.8.0
+six==1.16.0
+termcolor==1.1.0
+terminado==0.12.1
+testpath==0.5.0
+tornado==6.1
+traitlets==5.1.1
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.2
+zipp==3.6.0
