--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ backcall==0.2.0
 bleach==4.1.0
 cffi==1.15.0
 click==8.0.3
+cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
 Flask==2.0.2
+fonttools==4.28.1
 importlib-resources==5.4.0
 ipykernel==6.5.0
 ipython==7.29.0
@@ -20,7 +22,9 @@ jsonschema==4.2.1
 jupyter-client==7.0.6
 jupyter-core==4.9.1
 jupyterlab-pygments==0.1.2
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
+matplotlib==3.5.0
 matplotlib-inline==0.1.3
 mistune==0.8.4
 nbclient==0.5.8
@@ -35,6 +39,7 @@ pandocfilters==1.5.0
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.4.0
 prometheus-client==0.12.0
 prompt-toolkit==3.0.22
 ptyprocess==0.7.0
@@ -46,10 +51,12 @@ python-dateutil==2.8.2
 pytz==2021.3
 pyzmq==22.3.0
 Send2Trash==1.8.0
+setuptools-scm==6.3.2
 six==1.16.0
 termcolor==1.1.0
 terminado==0.12.1
 testpath==0.5.0
+tomli==1.2.2
 tornado==6.1
 traitlets==5.1.1
 wcwidth==0.2.5
